[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "build.py"
version = "0.0.0"
description = "Opinionated Arch package builder"
readme = "README.md"
requires-python = ">=3.11"
license = { file="COPYING" }
authors = [
    { name="Ivan Shapovalov", email="intelfx@intelfx.name" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
buildctl = "buildpy.cli.buildctl:buildctl"

[project.urls]
"Homepage" = "https://github.com/intelfx/build.py"
"Bug Tracker" = "https://github.com/intelfx/build.py/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]
pythonpath = [ "src" ]
testpaths = [ "tests" ]
